--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <title>Testing</title>
 </head>
 <body>
     <p>This is a simple web page to test the js</p>
 </body>
 
-<script src="./index.js"></script>
+<script type="module" src="./index.js"></script>
+<script type="module" src="./index_copy.js"></script>
 </html>
 
 
