adding new challenges

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+ 
 
     <title>Testing</title>
 </head>
@@ -11,8 +11,8 @@
     <p>This is a simple web page to test the js</p>
 </body>
 
-<script type="module" src="./index.js"></script>
-<script type="module" src="./index_copy.js"></script>
+<!-- <script src="./index.js"></script> -->
+<script src="./index_copy.js"></script>
 </html>
 
 
