--- a/practice.html
+++ b/practice.html
@@ -10,12 +10,15 @@
       background-color: skyblue;
       /* position: sticky; */
       position : absolute;
-      /* top: 0; */
+      top: 0;
+      right: 0;
+      /* bottom :0; */
+
     }
 
     .child-two{
       background-color: brown;
-      /* position: absolute; */
+      /* position: relative; */
       /* top:0; */
     }
 
@@ -24,6 +27,7 @@
     }
 
     .child{
+
       padding : 8px;
       border :1px solid black;
       
