--- a/practice.html
+++ b/practice.html
@@ -79,6 +79,78 @@
     color: white;
     padding: 0.5em;
   }
+
+
+  .toggle_radio {
+			color: white !important;
+			font-size: 10px !important;
+			font-weight: bold;
+			position: relative;
+			background: rgb(38, 50, 56, .3);
+			margin: 4px auto;
+			overflow: hidden;
+			padding: 0 !important;
+			-webkit-border-radius: 50px;
+			-moz-border-radius: 50px;
+			border-radius: 50px;
+			position: relative;
+			height: 26px;
+			width: 135px;
+			font-size: 10px !important;
+		}
+
+		.toggle_radio>* {
+			float: left;
+		}
+
+		.toggle_radio input[type=radio] {
+			display: none;
+		}
+
+		.toggle_radio label {
+			/* font: 90%/1.618 "Source Sans Pro"; */
+			color: black;
+			z-index: 0;
+			display: block;
+			width: 60px;
+			height: 20px;
+			margin: 3px 3px;
+			-webkit-border-radius: 50px;
+			-moz-border-radius: 50px;
+			border-radius: 50px;
+			cursor: pointer;
+			z-index: 1;
+			text-align: center;
+		}
+
+		.toggle_option_slider {
+			background-color: rgb(255, 255, 255);
+			width: 68px;
+			height: 24px;
+			position: absolute;
+			padding-top: 3px;
+			text-align: center;
+			color: black !important;
+			top: 1px;
+			-webkit-border-radius: 50px;
+			-moz-border-radius: 50px;
+			border-radius: 50px;
+			-webkit-transition: all .4s ease;
+			-moz-transition: all .4s ease;
+			-o-transition: all .4s ease;
+			-ms-transition: all .4s ease;
+			transition: all .4s ease;
+		}
+
+		#cases1:checked~.toggle_option_slider {
+			background-color: rgb(255, 255, 255);
+			left: 0.5px;
+		}
+
+		#cases2:checked~.toggle_option_slider {
+			background-color: rgb(255, 255, 255);
+			left: 67px;
+		}
   </style>
 </head>
 
@@ -119,10 +191,38 @@
     <p>This week-long retreat will level-up your coding ninja skills to actual ninja skills. No longer is the humble bisection search limited to sorted arrays or coding interview questions, applying its concepts in the kitchen will have you chopping carrots in O(log n) time before you know it.</p>
     <button>Sign Up</button>
   </article>
+
+
+  <div class="toggle_radio float-left">
+    <input type="radio" class="toggle_option" id="cases1"
+      name="cases" checked value="mycases"> <input
+      type="radio" class="toggle_option" id="cases2"
+      name="cases" value="allcases"> <label for="cases1">
+      <p>My Cases</p>
+    </label> <label for="cases2">
+      <p>All Cases</p>
+    </label>
+    <div class="toggle_option_slider">My Cases</div>
+  </div>
 </main>
 <br>
 <footer>&copy; 2018 FCC Kitchen</footer>
 </body>
+
+<script>
+    console.log(document.querySelectorAll('.toggle_option')); 
+    document.querySelectorAll('.toggle_option').forEach((item) => {
+      item.addEventListener('change', (e) => {
+        console.log(e.target.value);
+
+        if(e.target.value.toLowerCase() == "mycases"){
+          console.log("display the my cases table");
+        }else{
+          console.log("display the other table");
+        }
+      })
+    });
+</script>
 </html>
 
 
