--- a/grid.html
+++ b/grid.html
@@ -12,12 +12,16 @@
 
     <h1>This is test website for learning grid layout</h1>
     <div class="container">
-        <div>one</div>
+        <!-- <div>one</div>
         <div>two</div>
         <div>three</div>
         <div>four</div>
         <div>five</div>
-        <div>six</div>
+        <div>six</div> -->
+        <div class="header">Header</div>
+        <div class="menu">Menu</div>
+        <div class="content">Content</div>
+        <div class="footer">Footer</div>
     </div>
 
     
