addin grid code

--- a/grid.html
+++ b/grid.html
@@ -10,18 +10,28 @@
 </head>
 <body>
 
-    <h1>This is test website for learning grid layout</h1>
+    <!-- <h1>This is test website for learning grid layout</h1>
     <div class="container">
-        <!-- <div>one</div>
-        <div>two</div>
-        <div>three</div>
-        <div>four</div>
-        <div>five</div>
-        <div>six</div> -->
+        
         <div class="header">Header</div>
         <div class="menu">Menu</div>
         <div class="content">Content</div>
         <div class="footer">Footer</div>
+    </div> -->
+
+    <div class="container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
+        <div>11</div>
+        <div>12</div>
     </div>
 
     
