adding porfolio files

--- a/page.html
+++ b/page.html
@@ -25,7 +25,19 @@
         
     </header>
     <main>
+        <section class="presentation">
+            <div class="introduction">
+                <div class="intro-text">
+                    <p>Hi, I am <span id="name">Shahabaz</span>. I am an full stack web developer with a focus on JavaScript technologies.</p>
+                </div>
+            </div>
 
+            <div class="cover">
+
+                <img src="img/IMG_5613.jpg" alt="cover picture"/>
+
+            </div>
+        </section>
     </main>
     <footer>
 
