adding about me page

--- a/page.html
+++ b/page.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/page.css">
+    <script src="https://kit.fontawesome.com/d92005360f.js" crossorigin="anonymous"></script>
+
     <title>Page</title>
 </head>
 <body>
@@ -17,7 +19,7 @@
             <nav>
                 <ul class="nav-links">
                     <li class="nav-link"><a href="#">home</a></li>
-                    <li class="nav-link"><a href="#">about</a></li>
+                    <li class="nav-link"><a href="#about">about</a></li>
                     <li class="nav-link"><a href="#">contact</a></li>
                 </ul>
             </nav>
@@ -28,7 +30,7 @@
         <section class="presentation">
             <div class="introduction">
                 <div class="intro-text">
-                    <p>Hi, I am <span id="name">Shahabaz</span>. I am an full stack web developer with a focus on JavaScript technologies.</p>
+                    <p>Hi, I am <span id="name">Shahabaz</span>. I am a full stack web developer with a focus on JavaScript technologies.</p>
                 </div>
             </div>
 
@@ -37,6 +39,46 @@
                 <img src="img/IMG_5613.jpg" alt="cover picture"/>
 
             </div>
+        </section>
+
+        <section class="about-me" id="about">
+            <!-- <div class="tech-stickers"> -->
+
+                <div class="techHeading">
+                    <h3>Technologies I worked on</h3>
+                </div>
+
+                <div class="sticker-wrapper">
+                    <span>
+                        <i class="fab fa-js-square"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-css3-alt"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-html5"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-node-js"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-html5"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-html5"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-html5"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-html5"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-html5"></i>
+                    </span>
+                </div>
+                
+            <!-- </div> -->
         </section>
     </main>
     <footer>
