adding contact page styling

--- a/page.html
+++ b/page.html
@@ -103,11 +103,14 @@
                         <button>Contact</button>
                     </div>
                 </form>
+                <div class="socialMedia">
+                    <a href="https://www.linkedin.com/in/m-m-shahabaz-baig-59ba7910a/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/shabazbaig5" target="_blank"><i class="fab fa-git"></i></a>
+                    <a href="https://twitter.com/shabazhunt" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                </div>
             </div>
 
-            <div class="socialMedia">
-                
-            </div>
+            
         </section>
     </main>
     <footer>
