adding contact page styling

--- a/page.html
+++ b/page.html
@@ -30,7 +30,7 @@
         <section class="presentation" id="home">
             <div class="introduction">
                 <div class="intro-text">
-                    <p>Hi, I am <span id="name">Shahabaz</span>. I am a full stack web developer with a focus on JavaScript technologies.</p>
+                    <p>Hi, I am <span id="name">Shahabaz</span>. I am an automation specialist at Amazon.</p>
                 </div>
             </div>
 
