--- a/position.html
+++ b/position.html
@@ -3,14 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/positions.css"
     <title>Document</title>
 </head>
 <body>
     
     <section class="postions">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
+        <div class="one">1</div>
+        <div class="two">2</div>
+        <div class="three">3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>7</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>7</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
     </section>
 </body>
 </html>
