adding new practice files

--- a/table.html
+++ b/table.html
@@ -28,6 +28,10 @@
       padding: 5px 10px;
       border: 1px solid #ccc;
     }
+
+    #example{
+      display: inline;
+    }
     </style>
   </head>
   <body>
@@ -60,6 +64,9 @@
           </tr>
         </tbody>
       </table>
+
+
+      <div id="example">test</div>
     </main>
 
     <!-- <script>
